# cpplinq

./: .clang-format  .gitignore  CMakeLists.txt  cpplinq.ext.sublime-project
include/cpplinq/: cpplinq.ext.hpp  cpplinq.hpp
include/cpplinq/ext/: collect.hpp  collect_dequeue.hpp  collect_forward_list.hpp  collect_list.hpp  collect_map.hpp  collect_multimap.hpp  collect_multiset.hpp  collect_set.hpp  collect_unordered_map.hpp  collect_unordered_multimap.hpp  collect_unordered_multiset.hpp  collect_unordered_set.hpp  collect_vector.hpp  container_detect.hpp
tests/: CMakeLists.txt  main.cc
